# CPPMinT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  CMakeLists.txt  Common.h  Data.json  EASTLMem.cpp  Logging.h  Main.cpp  SimpleBench.h
src/Data/: motivations.txt
